--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ ul li {
     margin-right: auto;
     border-radius: 20px;
     margin-top: 90px;
+    transition: all 0.5s ease;
+}
+.btn button:hover {
+    background: #03174c;
 }
 .about {
     display: flex;
@@ -141,6 +145,8 @@ h2 {
     width: 1440px;
     font-family: 'Manrope', sans-serif;
     color: #fff;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 h3 {
     font-size: 28px;
@@ -162,6 +168,11 @@ p {
     border: none;
     border-radius: 20px;
     margin-top: 70px;
+    transition: all 0.5s ease;
+}
+.btn_2 button:hover {
+    background: #fff;
+    color: #161616;
 }
 .description_2 {
     display: flex;
@@ -176,4 +187,228 @@ p {
     margin-top: 130px;
     margin-bottom: 70px;
     font-family: 'Manrope', sans-serif;
+}
+.item_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+h4 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.foto_1 {
+    margin-bottom: 30px;
+    width: 375px;
+    height: 375px;
+}
+.main_classes {
+    display: flex;
+    justify-content: space-between;
+}
+.foto_2 {
+    margin-bottom: 30px;
+    width: 375px;
+    height: 375px;
+}
+.item_2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.foto_3 {
+    margin-bottom: 30px;
+    width: 375px;
+    height: 375px;
+}
+.item_3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.btn_3 button {
+    width: 350px;
+    height: 70px;
+    display: block;
+    background: #fe6508;
+    color: #fff;
+    font-size: 18px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    margin-top: 70px;
+    margin-bottom: 120px;
+    transition: all 0.5s ease;
+}
+.btn_3 button:hover {
+    background: #03174c;
+}
+.up_level {
+    background-image: url('img_4.png');
+    width: 1440px;
+    height: 570px;
+    margin: 0 auto;
+    position: absolute;
+    color: #fff;
+    padding-top: 90px;
+}
+.btn_4 button {
+    width: 350px;
+    height: 70px;
+    display: block;
+    background: #fe6508;
+    color: #fff;
+    font-size: 18px;
+    border: none;
+    border-radius: 20px;
+    margin-top: 60px;
+    transition: all 0.5s ease;
+}
+.btn_4 button:hover {
+    background: #fff;
+    color: #161616;
+}
+.beginner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #161616;
+    width: 350px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 30px;
+}
+.premium {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #03174c;
+    width: 350px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 30px;
+}
+.beginner_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #161616;
+    width: 350px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 30px;
+}
+.plans {
+    display: flex;
+    justify-content: space-between;
+}
+.btn_5 button {
+    width: 220px;
+    height: 70px;
+    display: block;
+    background: #03174c;
+    color: #fff;
+    font-size: 18px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    border-radius: 20px;
+    margin-bottom: 120px;
+    transition: all 0.5s ease;
+}
+.btn_5 button:hover {
+    background: #fe6508;
+}
+.contacts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 70px;
+    font-family: 'Manrope', sans-serif;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    background-image: url('contact.png');
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    padding-top: 70px;
+}
+.first_input {
+    display: inline-block;
+    background: none;
+    width: 400px;
+    color: #767676;
+    font-size: 16px;
+    border: none;
+}
+.first_input:focus {
+    background: #f0f0f0;
+    outline: none;
+    color: black;
+}
+hr {
+    border-color: #f7f7f7;
+    margin-top: 10px;
+}
+.second_input {
+    display: inline-block;
+    background: none;
+    width: 400px;
+    color: #767676;
+    font-size: 16px;
+    border: none;
+}
+.second_input:focus {
+    background: #f0f0f0;
+    outline: none;
+    color: black;
+}
+.third_input {
+    display: inline-block;
+    background: none;
+    width: 400px;
+    color: #767676;
+    font-size: 16px;
+    border: none;
+}
+.third_input:focus {
+    background: #f0f0f0;
+    outline: none;
+    color: black;
+}
+.btn_6 button {
+    width: 200px;
+    height: 70px;
+    display: block;
+    background: #fff;
+    color: black;
+    font-size: 18px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 55px;
+    border-radius: 20px;
+    margin-bottom: 70px;
+    transition: all 0.5s ease;
+}
+.btn_6 button:hover {
+    background: #fe6508;
+}
+.line {
+    border-color: #f7f7f7;
+    width: 1440px;
+    margin: 0;
+    padding: 0;
 }
