--- a/style.css
+++ b/style.css
@@ -412,3 +412,52 @@ hr {
     margin: 0;
     padding: 0;
 }
+.footer {
+    background: #03174c;
+    width: 1440px;
+    padding-top: 70px;
+}
+ul li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.map {
+    display: flex;
+    align-items: center;
+    color: #f0f0f0;
+}
+.phone_1 {
+    display: flex;
+    align-items: center;
+}
+.phone_1 a {
+    color: #f0f0f0;
+    text-decoration: none;
+}
+.post {
+    display: flex;
+    align-items: center;
+    color: #f0f0f0;
+}
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
+.social {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 40px;
+}
+.social li {
+    margin-right: 15px;
+}
+.rights {
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    padding-bottom: 70px;
+}
